...
            content = Row(
              children: [
                Expanded(
                  child: Stack(
                    children: [
                      Center(child: _image(before)),
                      Positioned(top: 8, left: 8, child: _chip('BEFORE')),
                    ],
                  ),
                ),
                const SizedBox(width: 2),
                Expanded(
                  child: Stack(
                    children: [
                      Center(child: _image(after)),
                      Positioned(top: 8, right: 8, child: _chip('AFTER')),
                    ],
                  ),
                ),
              ],
            );
            return content;
...
