...
        children: [
          Text.rich(
            TextSpan(
              children: [
                const TextSpan(text: 'Your photos,\n'),
                TextSpan(
                  text: 'developed.',
                  style: headline.copyWith(fontStyle: FontStyle.italic),
                ),
              ],
            ),
            style: headline,
          ),
...
